Apply OpenRewrite Java 11 migration
Apply OpenRewrite's "Migrate from Java 8 to Java 11" recipe.

This is part of #1706.