@@ -73,19 +73,19 @@ public class ReusableMessageFactoryTest {
     public void testCreateEventOverwritesFields() throws Exception {
         final Message message1 = factory.newMessage("text, p0={} p1={} p2={} p3={}", 1, 2, 3, 4);
         assertReusableParameterizeMessage(message1, "text, p0={} p1={} p2={} p3={}", new Object[] {
-            new Integer(1), //
-            new Integer(2), //
-            new Integer(3), //
-            new Integer(4), //
+            Integer.valueOf(1), //
+            Integer.valueOf(2), //
+            Integer.valueOf(3), //
+            Integer.valueOf(4), //
         });
 
         factory.recycle(message1);
         final Message message2 = factory.newMessage("other, A={} B={} C={} D={}", 1, 2, 3, 4);
         assertReusableParameterizeMessage(message1, "other, A={} B={} C={} D={}", new Object[] {
-            new Integer(1), //
-            new Integer(2), //
-            new Integer(3), //
-            new Integer(4), //
+            Integer.valueOf(1), //
+            Integer.valueOf(2), //
+            Integer.valueOf(3), //
+            Integer.valueOf(4), //
         });
         assertSame(message1, message2);
         factory.recycle(message2);
@@ -115,17 +115,17 @@ public class ReusableMessageFactoryTest {
         assertNotNull(message2[0]);
         assertNotSame(message1[0], message2[0]);
         assertReusableParameterizeMessage(message1[0], "text, p0={} p1={} p2={} p3={}", new Object[] {
-            new Integer(1), //
-            new Integer(2), //
-            new Integer(3), //
-            new Integer(4), //
+            Integer.valueOf(1), //
+            Integer.valueOf(2), //
+            Integer.valueOf(3), //
+            Integer.valueOf(4), //
         });
 
         assertReusableParameterizeMessage(message2[0], "other, A={} B={} C={} D={}", new Object[] {
-            new Integer(1), //
-            new Integer(2), //
-            new Integer(3), //
-            new Integer(4), //
+            Integer.valueOf(1), //
+            Integer.valueOf(2), //
+            Integer.valueOf(3), //
+            Integer.valueOf(4), //
         });
         factory.recycle(message1[0]);
         factory.recycle(message2[0]);
